# snpmerge

./: .gitignore  README.md  pyproject.toml
snpmerge/: __init__.py  mul.py
tests/: __init__.py  test_mul.py
tests/data/: f1.csv  f2.csv  f3.csv
