[tool.poetry]
name = "snpmerge"
version = "0.5.0"
description = "高效的,低内存合并snp文件"
authors = ["similarface,yangwubing"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
tqdm = "^4.64.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
